RTF: escape special characters in style names (partially closes fdo#33478)